--- a/searchers/s3_buckets_test_aws_fixture.yaml
+++ b/searchers/s3_buckets_test_aws_fixture.yaml
@@ -7,7 +7,7 @@ interactions:
     headers:
       Accept-Encoding:
       - identity
-    url: https://s3.us-west-2.amazonaws.com/
+    url: https://s3.us-west-2.amazonaws.com/?x-id=ListBuckets
     method: GET
   response:
     body: |-
